[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/roaming/roaming-operators',
    'pallets/roaming/roaming-networks',
    'pallets/roaming/roaming-organizations',
    'pallets/roaming/roaming-network-servers',
    'pallets/roaming/roaming-devices',
    'pallets/roaming/roaming-routing-profiles',
    'pallets/roaming/roaming-service-profiles',
    'pallets/roaming/roaming-accounting-policies',
    'pallets/roaming/roaming-agreement-policies',
    'pallets/roaming/roaming-network-profiles',
    'pallets/roaming/roaming-device-profiles',
    'pallets/roaming/roaming-sessions',
    'pallets/roaming/roaming-billing-policies',
    'pallets/roaming/roaming-charging-policies',
    'pallets/roaming/roaming-packet-bundles',
    'pallets/mining/configuration/token-mining',
    'pallets/mining/configuration/hardware-mining',
    'pallets/mining/rates/token-mining',
    'pallets/mining/rates/hardware-mining',
    'pallets/mining/sampling/token-mining',
    'pallets/mining/sampling/hardware-mining',
    'pallets/mining/eligibility/token-mining',
    'pallets/mining/eligibility/hardware-mining',
    'pallets/mining/lodgements/token-mining',
    'pallets/mining/lodgements/hardware-mining',
    'runtime',
]
