[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/roaming/roaming-operators',
    'pallets/roaming/roaming-networks',
    'pallets/roaming/roaming-organizations',
    'pallets/roaming/roaming-network-servers',
    'pallets/roaming/roaming-devices',
    'pallets/roaming/roaming-routing-profiles',
    'pallets/roaming/roaming-service-profiles',
    'pallets/roaming/roaming-accounting-policies',
    'pallets/roaming/roaming-agreement-policies',
    'pallets/roaming/roaming-network-profiles',
    'pallets/roaming/roaming-device-profiles',
    'pallets/roaming/roaming-sessions',
    'pallets/roaming/roaming-billing-policies',
    'pallets/roaming/roaming-charging-policies',
    'pallets/roaming/roaming-packet-bundles',
    'pallets/mining/config/token',
    'pallets/mining/config/hardware',
    'pallets/mining/rates/token',
    'pallets/mining/rates/hardware',
    'pallets/mining/sampling/token',
    'pallets/mining/sampling/hardware',
    'pallets/mining/eligibility/token',
    'pallets/mining/eligibility/hardware',
    'pallets/mining/claims/token',
    'pallets/mining/claims/hardware',
    'runtime',
]
